--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Keyu Wu"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-repository               : "Cathyccathy/keyuwu.github.io"
+title                    : "Keyu Wu's Website"
+description              : "Computer Vision, Machine Learning "
+repository               : "kywu0122/kywu0122.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
