--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Keyu Wu"
-  avatar           : "images/my.jpg"
+  avatar           : "images/my_1.jpg"
   bio              : "Fudan University"
   location         : "Shanghai, China"
   employer         :
